--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button id='heart' > ❤️ </button>
   <button id='pause' > pause </button>
 
-  <ul class='likes'></ul>
+  <ul class='likes' id="likes"></ul>
 
   <div>
     <h3>Comments</h3>
